my new changes